--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,16 @@
-# React frontend (connects to Flask backend)
-REACT_APP_API_URL=http://localhost:5000
+# # React frontend (connects to Flask backend)
+# REACT_APP_API_URL=http://localhost:5000
 
-# Flask backend configuration
-FLASK_ENV=development
-FLASK_APP=app.py
-FLASK_DEBUG=True
-SECRET_KEY=supersecretkey
+# # Flask backend configuration
+# FLASK_ENV=development
+# FLASK_APP=app.py
+# FLASK_DEBUG=True
+# SECRET_KEY=supersecretkey
 
-# (Optional) If using a database, specify here
-# DATABASE_URL=sqlite:///crime_data.db
+# # (Optional) If using a database, specify here
+# # DATABASE_URL=sqlite:///crime_data.db
 
-# (Optional) For file paths if needed by Flask
-MODEL_PATH=model.pkl
-DATASET_PATH=crp.xlsx
-CRP_DATASET_PATH=new_dataset.xlsx
+# # (Optional) For file paths if needed by Flask
+# MODEL_PATH=model.pkl
+# DATASET_PATH=crp.xlsx
+# CRP_DATASET_PATH=new_dataset.xlsx
